--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -44,7 +44,7 @@
     border: none !important;
 }
 
-.nav-link {
+.nav-link, .language-btn {
     color: #000;
     font-weight: 500;
     position: relative;
@@ -99,7 +99,7 @@
   -webkit-backdrop-filter: blur(5px) saturate(150%);
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
   border-radius: 0.5em;
-  transition: .2s ease;
+  transition: .35s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .lang-link {
@@ -119,9 +119,13 @@
   transition: .2s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
+.language-btn:hover { color: var(--primary); }
+
 /* Small screens */
 
 @media (max-width: 1000px) {
+    .buttons-wrapper { gap: .5em !important; }
+    .nav-wrapper { padding: 0 1em; }
     .navbar-links {
         background-color: rgba(255, 255, 255, 0.5);
         backdrop-filter: blur(5px) saturate(150%);
@@ -149,3 +153,6 @@
 
     /* Language related */
 }
+
+.arr_menu { transition: .5s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
+.rotate180 { transform: rotate(180deg) !important; }
