--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -9,11 +9,6 @@
 }
 
 .nav-wrapper {
-    background-color: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px) saturate(150%);
-    -webkit-backdrop-filter: blur(5px) saturate(150%);
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
     position: relative;
     display: flex;
     justify-content: space-between; align-items: center;
@@ -21,6 +16,20 @@
     width: 100%; min-height: 5em;
     margin: 1.5em; padding: 0 2em;
     border-radius: 1em;
+}
+
+.navbar-blur-wrapper {
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    width: 100%; height: 100%;
+
+    border-radius: 1em;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px) saturate(150%);
+    -webkit-backdrop-filter: blur(5px) saturate(150%);
+    z-index: -1;
 }
 
 .nav-logo {
@@ -66,6 +75,10 @@
 .nav-link:hover,
 .nav-link.active {
     color: var(--primary);
+    text-shadow: 
+        0 0 7px var(--shadow-color),
+        0 0 7px var(--shadow-color)
+    ;
 }
 
 .nav-link:hover::before,
