--- a/assets/css/sponsori.css
+++ b/assets/css/sponsori.css
@@ -91,6 +91,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
+  width: 100%;
 }
 
 .partner-square:hover .grid-link:hover,
