--- a/assets/css/sponsori.css
+++ b/assets/css/sponsori.css
@@ -18,7 +18,7 @@
 
 .container-p {
   display: grid;
-  width: 100%vw;
+  width: 100vw;
   padding: 2rem 1rem;
   max-width: 1200px;
   margin: 0 auto;
