--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,8 @@
   --card-background: #eee;
   --results-icons: brightness(100%);
   --navbar-bg: linear-gradient(to right, #d1c3e680, #d1c3e640);
-  
+  --team-photo-bg: #ececec;
+
   --rvr_shadow-color: #dc82ff;
   --shadow-color: var(--rvr_shadow-color);
 }
