--- a/assets/css/echipa.css
+++ b/assets/css/echipa.css
@@ -92,7 +92,8 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 3em;
-  margin: 50px auto 100px;
+  padding: 0;
+  margin: 75px min(20em, 10vw);
 }
 
 .item-links {
