--- a/assets/css/formular.css
+++ b/assets/css/formular.css
@@ -37,17 +37,18 @@ html, body {
   align-items: center;
 }
 
-.contact-info div svg {
-  margin-top: .5em;
-}
-
 .contact-info a {
   text-decoration: none;
+  color: var(--dark-text-color);
 }
 
 .contact-info a:hover {
   text-decoration: underline;
   color: var(--primary);
+}
+
+.contact-info .custom-span {
+  margin-bottom: 1em;
 }
 
 .col {
