--- a/assets/css/formular.css
+++ b/assets/css/formular.css
@@ -101,6 +101,7 @@ main {
 
 @media (max-width: 991px) {
   .contact-info {
+    height: 70vh;
     flex-direction: column;
     background: linear-gradient(90deg, #ba12aa 0%, var(--primary) 100%);
     background-size: 75% 100%;
@@ -113,7 +114,7 @@ main {
 
   .contact-info div {
     width: 100%;
-    height: auto;
+    flex: 1;
   }
 
   .custom-span {
